Fix category title overflow

--- a/web/links.scss
+++ b/web/links.scss
@@ -180,6 +180,8 @@
                     h2 {
                         grid-column: 3;
                         grid-row: 2 / 4;
+                        max-width: calc(100% + 40pt);
+                        overflow: hidden;
                         &:not(:last-child) {
                             grid-row: 2;
                             align-self: end;
